ubiquity (2.5.23) UNRELEASED; urgency=low

  * Ensure we always have an automatic partitioning option selected.

 -- Evan Dandrea <ev@ubuntu.com>  Wed, 02 Mar 2011 00:42:08 +0000

ubiquity (2.5.22) natty; urgency=low

  [ Evan Dandrea ]
  * Make apt-clone executable. D'oh.
  * Show the amount of space available for Ubuntu after resizing for
    each disk in the combo box.
  * Don't show the progress section when advancing to the manual
    partitioning page from the hyperlink for it.
  * Change 'Figure Out' to 'Detect' for reals (LP: #717500).

  [ Colin Watson ]
  * Deny requests from hw-detect to load firmware (LP: #727288).

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 01 Mar 2011 23:28:42 +0000

ubiquity (2.5.21) natty; urgency=low

  * Add a set_autopartition_options method stub.
  * Don't display the package preservation progress message if it's
    ultimately going to be skipped.
  * Show the progress bar as soon as we have a final autopartitioning
    option.
  * Automatic update of included source packages: partman-auto
    93ubuntu9.

 -- Evan Dandrea <ev@ubuntu.com>  Tue, 01 Mar 2011 08:13:20 +0000

ubiquity (2.5.20) natty; urgency=low

  * Merge the automatic partitioner redesign branch (LP: #723849).

 -- Evan Dandrea <ev@ubuntu.com>  Tue, 01 Mar 2011 04:48:11 +0000

ubiquity (2.5.19) natty; urgency=low

  [ Colin Watson ]
  * Automatic update of included source packages: base-installer
    1.116ubuntu1, console-setup 1.57ubuntu8, flash-kernel 2.28ubuntu15,
    partman-auto 93ubuntu8, partman-target 71ubuntu2.

  [ Bryce Harrington ]
  * Revert "Queue a redraw of the panel after setting the background".  This
    change is implicated in a memory leak leading to OOM conditions and
    eventual crash of Xserver.  (Possible fix for LP: #714829, would reopen
    693300)

  [ Mario Limonciello ]
  * Fix reference leak in panel set_background function.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 28 Feb 2011 19:54:45 +0000
